syntax = "proto3";

package xai_api;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/ZaguanLabs/xai-sdk-go/proto/gen/go/xai/v1;xaiv1";

// An API service that let users get details of available models on the platform.
service Models {
  // Lists all language models available to your team (based on the API key).
  rpc ListLanguageModels(google.protobuf.Empty) returns (ListLanguageModelsResponse);
  
  // Lists all embedding models available to your team (based on the API key).
  rpc ListEmbeddingModels(google.protobuf.Empty) returns (ListEmbeddingModelsResponse);
  
  // Lists all image generation models available to your team (based on the API key).
  rpc ListImageGenerationModels(google.protobuf.Empty) returns (ListImageGenerationModelsResponse);
  
  // Get details of a specific language model by model name.
  rpc GetLanguageModel(GetModelRequest) returns (LanguageModel);
  
  // Get details of a specific embedding model by model name.
  rpc GetEmbeddingModel(GetModelRequest) returns (EmbeddingModel);
  
  // Get details of a specific image generation model by model name.
  rpc GetImageGenerationModel(GetModelRequest) returns (ImageGenerationModel);
}

// Modality enum
enum Modality {
  INVALID_MODALITY = 0;
  TEXT = 1;
  IMAGE = 2;
  EMBEDDING = 3;
}

// Get model request
message GetModelRequest {
  string name = 1;
}

// Language model information
message LanguageModel {
  string name = 1;
  string version = 2;
  repeated Modality input_modalities = 3;
  repeated Modality output_modalities = 4;
  int64 prompt_text_token_price = 5;
  int64 prompt_image_token_price = 6;
  int64 completion_text_token_price = 7;
  google.protobuf.Timestamp created = 8;
  int32 max_prompt_length = 9;
  string system_fingerprint = 10;
  repeated string aliases = 11;
  int64 cached_prompt_token_price = 12;
  int64 search_price = 13;
}

// List language models response
message ListLanguageModelsResponse {
  repeated LanguageModel models = 1;
}

// Embedding model information
message EmbeddingModel {
  string name = 1;
  string version = 2;
  repeated Modality input_modalities = 3;
  repeated Modality output_modalities = 4;
  int64 prompt_text_token_price = 5;
  int64 prompt_image_token_price = 6;
  google.protobuf.Timestamp created = 7;
  string system_fingerprint = 8;
  repeated string aliases = 11;
}

// List embedding models response
message ListEmbeddingModelsResponse {
  repeated EmbeddingModel models = 1;
}

// Image generation model information
message ImageGenerationModel {
  string name = 1;
  string version = 2;
  repeated Modality input_modalities = 3;
  repeated Modality output_modalities = 4;
  int64 image_price = 5;
  google.protobuf.Timestamp created = 6;
  int32 max_prompt_length = 7;
  string system_fingerprint = 8;
  repeated string aliases = 11;
}

// List image generation models response
message ListImageGenerationModelsResponse {
  repeated ImageGenerationModel models = 1;
}
